--- a/vignettes/intro.Rmd
+++ b/vignettes/intro.Rmd
@@ -16,26 +16,21 @@ vignette: >
   \usepackage[utf8]{inputenc}
 ---
 
+```{r, include=FALSE}
+knitr::opts_chunk$set(message=FALSE, warning=FALSE)
+```
 
 
 # Introduction
 
-The `crisprViz` package enables the graphical interpretation of `GuideSet`
-objects from the `crisprDesign` package by plotting guide RNA (gRNA) cutting
-locations against their target gene or other genomic region. These genomic
-plots are constructed using the `Gviz` package from Bioconductor.
+The `crisprViz` package enables the graphical interpretation of `GuideSet` objects from the `crisprDesign` package by plotting guide RNA (gRNA) cutting locations against their target gene or other genomic region. These genomic plots are constructed using the `Gviz` package from Bioconductor.
 
-This vignette walks through several use cases that demonstrate the range of and
-how to use plotting functions in the `crisprViz` package. This vignette also
-makes heavy use of the `crisprDesign` package to manipulate `GuideSet` objects
-in conjunction with plotting in the process of gRNA design. For more information
-about the `crisprDesign` package see [vignettes].
+This vignette walks through several use cases that demonstrate the range of and how to use plotting functions in the `crisprViz` package. This vignette also makes heavy use of the `crisprDesign` package to manipulate `GuideSet` objects in conjunction with plotting in the process of gRNA design. For more information about the `crisprDesign` package see [vignettes].
 
 
 # Installation
 
-`crisprViz` can be installed from Bioconductor using the following
-commands in an R session:
+`crisprViz` can be installed from Bioconductor using the following commands in an R session:
 
 ```{r, eval=FALSE}
 if (!requireNamespace("BiocManager", quietly = TRUE))
@@ -46,9 +41,7 @@ BiocManager::install("crisprViz")
 
 # Use cases
 
-All examples in this vignette will use human genome assembly `hg38` from the
-`BSgenome.Hsapiens.UCSC.hg38` package and gene model coordinates from Ensembl
-release 104 via the `crisprDesignData` package.
+All examples in this vignette will use human genome assembly `hg38` from the `BSgenome.Hsapiens.UCSC.hg38` package and gene model coordinates from Ensembl release 104 via the `crisprDesignData` package.
 
 ```{r, message=FALSE, warning=FALSE}
 library(BSgenome.Hsapiens.UCSC.hg38)
@@ -60,10 +53,7 @@ library(crisprViz)
 
 ## Visualizing the best gRNAs for a given gene
 
-Suppose we want to design the four best gRNAs using the SpCas9 CRISPR nuclease
-to knockout the human KRAS gene. To have the greatest impact on gene function
-we want to prioritize gRNAs that have greater isoform coverage and target
-closer to the 5' end of the CDS.
+Suppose we want to design the four best gRNAs using the SpCas9 CRISPR nuclease to knockout the human KRAS gene. To have the greatest impact on gene function we want to prioritize gRNAs that have greater isoform coverage and target closer to the 5' end of the CDS.
 
 We will start by finding all possible gRNAs that target the CDS of KRAS.
 
@@ -79,8 +69,7 @@ gs <- unique(gs)
 length(gs) # number of candidate gRNAs
 ```
 
-Before we plot all of our candidate gRNAs, let's first generate a simple plot
-with a few gRNAs to familiarize ourselves with some plot components and options.
+Before we plot all of our candidate gRNAs, let's first generate a simple plot with a few gRNAs to familiarize ourselves with some plot components and options.
 
 ```{r}
 plotGuideSet(gs[1:4],
@@ -89,22 +78,13 @@ plotGuideSet(gs[1:4],
 ```
 There are a few things to note here.
 
- * The ideogram track and genome axis track are at the top of our plot and give
- us coordinate information.
- * Our `targetGene` KRAS is plotted next, using coordinates from the provided
- `geneModel`, followed by our spacer subset. The name of each track is given
- on the left.
- * The strand information for each track is included in the label: `<-` for
- reverse strand and `->` for forward strand.
- * While we can identify which exon each spacer targets (which may be
- sufficient), the plot window is too large to provide further information.
+ * The ideogram track and genome axis track are at the top of our plot and give us coordinate information.
+ * Our `targetGene` KRAS is plotted next, using coordinates from the provided `geneModel`, followed by our spacer subset. The name of each track is given on the left.
+ * The strand information for each track is included in the label: `<-` for reverse strand and `->` for forward strand.
+ * While we can identify which exon each spacer targets (which may be sufficient), the plot window is too large to provide further information.
  * The plot only shows the 3' end of KRAS, rather than the entire gene.
  
-This last point is important: the default plot window is set by the spacers'
-ranges in the input `GuideSet` object. We can manually adjust this window by
-using the `from`, `to`, `extend.left`, and `extend.right` arguments. Here is
-the same plot adjusted to show the whole KRAS gene, which also reveals an
-additional isoform that is not targeted by any spacer in this example subset.
+This last point is important: the default plot window is set by the spacers' ranges in the input `GuideSet` object. We can manually adjust this window by using the `from`, `to`, `extend.left`, and `extend.right` arguments. Here is the same plot adjusted to show the whole KRAS gene, which also reveals an additional isoform that is not targeted by any spacer in this example subset.
  
 ```{r}
 kras_tx <- queryTxObject(txdb_human,
@@ -122,93 +102,124 @@ plotGuideSet(gs[1:4],
              extend.right=1000)
 ```
  
-As calculated above, there are a total of `{r} length(gs)` candidate gRNAs
-targeting the CDS of KRAS. Including all of them could crowd the plot space,
-making it difficult to interpret. To alleviate this we can hide the gRNA labels
-by setting the `showGuideLabels` argument to `FALSE`.
+As calculated above, there are a total of `{r} length(gs)` candidate gRNAs targeting the CDS of KRAS. Including all of them could crowd the plot space, making it difficult to interpret. To alleviate this we can hide the gRNA labels by setting the `showGuideLabels` argument to `FALSE`.
 
 ``` {r fig.height=10}
 plotGuideSet(gs,
              geneModel=txdb_human,
              targetGene="KRAS",
+             showGuideLabels=FALSE,
              from=from,
              to=to,
              extend.left=1000,
              extend.right=1000)
 ```
 
-Again, the plot window is too large to discern details for each spacer.
-However, we can clearly see five distinct clusters of spacer target locations
-that make up the CDS of the KRAS gene. The spacers in the 5'-most cluster (on
-the reverse strand) target the only coding region of the gene that is expressed
-by all isoforms, making it an ideal target for our scenario.
+At the gene level, the plot window is too large to discern details for each spacer target. However, we can see five distinct clusters of spacer target locations that cover the CDS of KRAS. The spacers in the 5'-most cluster (on the reverse strand) target the only coding region of the gene that is expressed by all isoforms, making it an ideal target for our scenario.
 
-We can see which gRNAs target this region by returning `showGuideLabels` to
-its default value of `TRUE`, and by adjusting the plot window with the `from`
-and `to` arguments. To include some surrounding context and prevent loss of
-information through cropping, we'll extend the margins of our plot window with
-`extend.left` and `extend.right`.
+We can see which gRNAs target this region by returning `showGuideLabels` to its default value of `TRUE`, and by adjusting the plot window to focus on our exon of interest.
 
 ```{r}
-# exon_ranks <- mcols(kras)$exon_rank
-# min_exon_rank <- min(exon_ranks)
-# targetRegion <- kras[exon_ranks == min_exon_rank]
-# from <- min(start(targetRegion))
-# to <- max(end(targetRegion))
-# plotGuideSet(gs,
-#              geneModel=txdb_human,
-#              targetGene="KRAS",
-#              # showGuideLabels=FALSE,
-#              from=from,
-#              to=to,
-#              extend.left=1000,
-#              extend.right=1000)
+# new window range around target exon
+exon_ranks <- mcols(kras)$exon_rank
+min_exon_rank <- min(exon_ranks)
+targetRegion <- kras[exon_ranks == min_exon_rank]
+from <- min(start(targetRegion))
+to <- max(end(targetRegion))
+plotGuideSet(gs,
+             geneModel=txdb_human,
+             targetGene="KRAS",
+             from=from,
+             to=to,
+             extend.left=20,
+             extend.right=20)
 ```
 
-Let's filter our `GuideSet` by the gRNA names in the plot. [then add on-target
-scores and generate the same plot with the gRNAs colored by score]. [no need to
-set from/to/extend.left/extend.right arguments, as the plot window automatically
-adjusts to fit our GuideSet].
+At this resolution we can get a much better idea of spacer location and orientation. In particular, the PAM sequence is visible as a narrow box on the 3' side of our protospacer sequences. We can also distinctly see which spacer targets overlap--it may be best to avoid pairing such spacers in some applications lest they sterically interfere with each other.
+
+If we have many gRNA targets in a smaller window and are not concerned with overlaps, we can configure the plot to only show the `pam_site`, rather than the entire protospacer and PAM sequence, by setting `pamSiteOnly` to `TRUE`.
 
 ```{r}
-# goodGuides <- c(80, 84, 88, 92, 96, 100, 104, 108, 112)
-# goodGuides <- paste0("spacer_", goodGuides)
-# gs <- gs[goodGuides]
-# 
-# gs <- addOnTargetScores(gs,
-#                         methods="deephf")
-# plotGuideSet(gs,
-#              geneModel=txdb_human,
-#              targetGene="KRAS",
-#              onTargetScore="score_deephf")
-
+plotGuideSet(gs,
+             geneModel=txdb_human,
+             targetGene="KRAS",
+             from=from,
+             to=to,
+             extend.left=20,
+             extend.right=20,
+             pamSiteOnly=TRUE)
 ```
 
-[any further steps?].
+Let's filter our `GuideSet` by the spacer names in the plot then briefly assess gRNA quality by adding an on-target score. We can pass the added score column to `onTargetScores` to color the spacers according to that score, with darker blue colors indicating higher scores. Note that for this plot we need not provide values for `from` and `to`, as the plot window adjusts to our filtered `GuideSet`.
+
+```{r, message=FALSE, warning=FALSE}
+goodGuides <- c("spacer_80", "spacer_84", "spacer_88", "spacer_92",
+                "spacer_96", "spacer_100", "spacer_104", "spacer_108",
+                "spacer_112")
+gs <- gs[goodGuides]
+
+gs <- addOnTargetScores(gs,
+                        methods="deephf")
+plotGuideSet(gs,
+             geneModel=txdb_human,
+             targetGene="KRAS",
+             onTargetScore="score_deephf")
+```
+
+<!-- ![legend caption](file path) -->
 
 
+## Plotting for precision targeting
 
+For a given CRISPR application, the target region may consist of only several base pairs rather than an exon or entire gene CDS. In these instances it is crucial to know exactly where the gRNAs target, and plots of gRNAs must be at a resolution capable of distinguishing individual bases. This is often the case for CRISPR base editor (CRISPRbe) applications, as the editing window for each gRNA is narrow and the results are specific to each target sequence.
 
+In this example we will zoom in on a few gRNAs targeting the 5' end of the human GPR21 gene. We want our plot to include genomic sequence information so we will set the `bsgenome` argument to the same `BSgenome` object we used to create our `GuideSet`.
 
+```{r, fig.height=6}
+gpr21 <- queryTxObject(txdb_human,
+                       featureType="cds",
+                       queryColumn="gene_symbol",
+                       queryValue="GPR21")
+be <- findSpacers(gpr21,
+                  crisprNuclease=BE4max,
+                  bsgenome=BSgenome.Hsapiens.UCSC.hg38)
+plotGuideSet(be[1:4],
+             geneModel=txdb_human,
+             targetGene="GPR21",
+             bsgenome=BSgenome.Hsapiens.UCSC.hg38,
+             from=123034550,
+             to=123034610)
+```
 
+The genomic sequence is given at the bottom of the plot as color-coded boxes. The color scheme used to describe the nucleotides is given in the biovizBase (link) package. If the plot has sufficient space, it will display nucleotide symbols rather than boxes. We can accomplish this by plotting a narrower range or by increasing the width of our plot space (see "Setting plot size" section).
 
+The plot above was generated with a plot space width of 7 inches; here's the same plot after we increase the width to 10 inches.
 
-
-## Use case #2:
-
-...Very zoomed in region (100 nucleotides) where guides are shown at a very
-granular level with thickness differentiating between spacer and PAM sequence, and sequence track
-This allows user to know exactly where the guides cut.
-
-
-
-
-
-
-
+```{r, fig.width=10, fig.height=6}
+# increase plot width from 7" to 10"
+plotGuideSet(be[1:4],
+             geneModel=txdb_human,
+             targetGene="GPR21",
+             bsgenome=BSgenome.Hsapiens.UCSC.hg38,
+             from=123034550,
+             to=123034610)
+```
 
 
 ## Use case #3:
+
+CRISPRa, target TP53
+
+
+
+```{r}
+data(tss_human, package="crisprDesignData")
+promoter <- queryTss(tss_human,
+                     queryColumn="gene_symbol",
+                     queryValue="TP53",
+                     tss_window=c(-2000, 0))
+```
+
 
 ...Tiling example: lots of guides piling up in a specific region (with a without
 labels option). Multiple nucleases.
@@ -218,9 +229,9 @@ Include repeat elements (Alu elements...), H3K27 track..., GC content track
 
 Don't need to put all tracks on single plot, but is there reason to separate...?
 
+FEATURES: annotations, includeSNPTrack, guideStacking, multiple guidesets...
 
-
-
+[begin with one (fully set up), then lead into plotting another for comparison]
 
 
 
